kuber-files/docs/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: web
spec:
  ports:
    - name: nginx-service
      port: 80
  selector:
    app: nginx

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: app
spec:
  ports:
    - name: nginx-service
      port: 80
  selector:
    app: nginx

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: db
spec:
  ports:
    - name: nginx-service
      port: 80
  selector:
    app: nginx
