kuber-files/docs/app-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-app
  namespace: db
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app: app
      - podSelector:
          matchLabels:
            app: nginx
      ports:
        - protocol: TCP
          port: 80
