kuber-files/docs/default-policy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-db
  namespace: db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
