kuber-files/docs/default-policy-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-web
  namespace: web
spec:
  podSelector: {}
  policyTypes:
    - Ingress
