kuber-files/docs/web-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-app
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app: web
      - podSelector:
          matchLabels:
            app: nginx
      ports:
        - protocol: TCP
          port: 80
